--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "alexusmai/ruslug": "^0.6.0",
         "fideloper/proxy": "~3.3",
+        "jenssegers/agent": "^2.6",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "spatie/laravel-translatable": "^2.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
