--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=7.0.0",
         "alexusmai/ruslug": "^0.6.0",
+        "anhskohbo/no-captcha": "^3.0",
         "fideloper/proxy": "~3.3",
         "jenssegers/agent": "^2.6",
         "laravel/framework": "5.5.*",
